--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,16 @@
 </head>
 <body>
     <h3>All Chats</h3>
+    <form method="get" action="/chats/new"><Button>New Chat</Button></form>
     <% for( let chat of chats) { %>
     <div class="chat">
-        <p><b>From </b><%= chat.from %></p>
+        <p><b>From: </b><i><%= chat.from %></i></p>
         <div class="message"><p><%= chat.msg %></p></div>
-        <p><b>Received by </b><%= chat.to%></p>
+        <p><b>Received by: </b><i><%= chat.to%></i></p>
         <hr>
+        
     </div>
+    <br><br><br>
     <% } %>
 </body>
 </html>
