New Chat Feature Added

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>Write new Chat ..</h3>
-    <form >
+    <form method="post" action="/chats">
         <br>
         <input type="text" placeholder="Who Are You?" name="from">
         <br><br>
