--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,12 @@
     <div class="chat">
         <p><b>From: </b><i><%= chat.from %></i></p>
         <div class="message"><p><%= chat.msg %></p></div>
+        <form action="/chats/<%= chat._id %>/edit" method="get"><button><h5>Edit</h5></button></form>
         <p><b>Received by: </b><i><%= chat.to%></i></p>
         <hr>
-        
+        <p><%= chat.created_at.toString().split(" ")[4] %></p>
+        <p><%= chat.created_at.toString().split(" ").slice(0,4).join(" ") %></p>
+    </div>
     </div>
     <br><br><br>
     <% } %>
