--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Write new Chat</title>
+    <link rel="stylesheet" href="/styles_new.css">
 </head>
 <body>
     <h3>Write new Chat ..</h3>
     <form method="post" action="/chats">
-        <br>
         <input type="text" placeholder="Who Are You?" name="from">
-        <br><br>
-        <textarea name="msg" >Write Your Message Here ..</textarea>
-        <br><br>
+        <textarea name="msg">Write Your Message Here ..</textarea>
         <input type="text" placeholder="add Receiver" name="to">
-        <br><br>
         <button>Create Chat</button>
     </form>
 </body>
