--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit The Chat</title>
-   
+   <link rel="stylesheet" href="/styles_edit.css">
 </head>
 <body>
     <h4><b>Edit your chat</b> <%= chat._id%></h4>
